<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_home_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:contentDescription="@string/imagem_logo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_home_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar_home_id"
        app:srcCompat="@drawable/logo_login" />

    <Button
        android:id="@+id/botao_adicionar_ganhos_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/fundo_botao"
        android:text="@string/texto_botao_adicionar_ganho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botao_adicionar_ganhos_fixos_id" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/annie_use_your_telescope"
        android:gravity="center"
        android:lineSpacingExtra="36sp"
        android:text="@string/titulo_toolbar_home"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_home_id"
        app:layout_constraintEnd_toEndOf="@+id/toolbar_home_id"
        app:layout_constraintStart_toStartOf="@+id/toolbar_home_id"
        app:layout_constraintTop_toTopOf="@+id/toolbar_home_id" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/grafico_geral_id"
        android:layout_width="match_parent"
        android:layout_height="366dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/toolbar_home_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_home_id" >

    </com.github.mikephil.charting.charts.BarChart>

    <Button
        android:id="@+id/botao_adicionar_ganhos_fixos_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/fundo_botao"
        android:text="@string/texto_botao_adicionar_gastos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grafico_geral_id" />

    <ImageButton
        android:id="@+id/botao_deslogar_user_id"
        android:layout_width="41dp"
        android:layout_height="43dp"
        android:background="@drawable/fundo_botao"
        android:contentDescription="@string/botao_deslogar_user"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/toolbar_home_id"
        app:layout_constraintTop_toTopOf="@+id/toolbar_home_id"
        app:srcCompat="@drawable/ic_deslogar_user" />


</androidx.constraintlayout.widget.ConstraintLayout>